[metadata]
name = kuka_task_client
version = 0.0.0
description = Python client for Kuka transform input service
author = Your Name
author_email = example@domain.com
license = Apache-2.0

[options]
packages = find:
install_requires =
    setuptools
    rclpy
    numpy  # 추가된 종속성
    scipy  # 추가된 종속성

[options.entry_points]
console_scripts =
    task_client = kuka_task_client.task_client:main

[develop]
script_dir=$base/lib/kuka_task_client

[install]
install_scripts=$base/lib/kuka_task_client
